# probing

./: README.md  setup.cfg  setup.py
examples/config/: generate_pos_configs.py  pos_tagging.yaml  transformer_probing.yaml
examples/data/morphology_probing/english_verb_tense/: dev.tsv  test.tsv  train.tsv
examples/data/morphology_probing_with_sample_level_masking/english_verb_tense/: dev.tsv  test.tsv  train.tsv
examples/data/pos_tagging/english/: .dev.swp  .test.swp  .train.swp  dev  test  train
probing/: batch_inference.py  config.py  experiment.py  inference.py  result.py  train.py  train_many_configs.py  utils.py
probing/data/: __init__.py  base_data.py  classification_data.py  sentence_probe_data.py
probing/models/: __init__.py  base.py  contextual_embedding_classifier.py  lstm_tagger.py  sequence_classifier.py
probing/scripts/: create_experiments_tsv.py
src/probing/: config.py  experiment.py  inference.py  train.py  train_many_configs.py  train_replica.py  utils.py
src/probing/data/: __init__.py  base_data.py  sentence_probe_data.py
src/probing/models/: __init__.py  base.py  contextual_embedding_classifier.py  embedding.py  mlp.py
tests/: test_config.py  test_main_runner.py
