[metadata]
name = probing
author = Judit Acs
description = Probe Transformer models
platforms = linux

[options]
packages =
    probing
install_requires =
    transformers
    pyyaml
    numpy
    torch>=1.7
    pandas
    scikit-learn
    unidecode
python_requires = >=3.6
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    flake8-docstrings>=1.6.0
    pep8-naming>=0.12.1

[flake8]
max-line-length = 100
